--- a/students/templates/students/home.html
+++ b/students/templates/students/home.html
@@ -1,137 +1,1 @@
-<!DOCTYPE html>
-<html lang="en">
-  <head>
-    <meta charset="utf-8">
-    <meta http-equiv="X-UA-Compatible" content="IE=edge">
-    <meta name="viewport" content="width=device-width, initial-scale=1">
-    <!-- The above 3 meta tags *must* come first in the head; any other head content must come *after* these tags -->
-    <meta name="description" content="">
-    <meta name="author" content="">
-    <link rel="icon" href="../../favicon.ico">
-
-    <title>SiteName</title>
-
-    <!-- Bootstrap core CSS -->
-    <link href="/static/students/dist/css/bootstrap.min.css" rel="stylesheet">
-
-    <!-- IE10 viewport hack for Surface/desktop Windows 8 bug -->
-    <!--<link href="../../assets/css/ie10-viewport-bug-workaround.css" rel="stylesheet">-->
-
-    <!-- Custom styles for this template - sidebar, etc. -->
-    <link href="/static/students/sidebar/sidebar.css" rel="stylesheet">
-    <link href="/static/students/home/home.css" rel="stylesheet">
-    <link href="/static/students/header/header.css" rel="stylesheet">
-
-    <!-- HTML5 shim and Respond.js for IE8 support of HTML5 elements and media queries -->
-    <!--[if lt IE 9]>
-      <script src="https://oss.maxcdn.com/html5shiv/3.7.3/html5shiv.min.js"></script>
-      <script src="https://oss.maxcdn.com/respond/1.4.2/respond.min.js"></script>
-    <![endif]-->
-  </head>
-
-  <body>
-    {% include "students/header.html" %}
-      
-    <div class="row-offcanvas row-offcanvas-left">
-      {% include "students/sidebar.html" %}
-    
-      <div id="main">
-          <div class="container-fluid">
-              <div class="col-md-12" id="home-jumbotron">
-                    <h1>
-                    {% if pageContent %}
-                        {{pageContent.header_text}}
-                    {% else %}
-                        Let the search begin!
-                    {% endif %}
-                    </h1>
-                    <p class="lead">
-                    {% if pageContent %}
-                        {{ pageContent.header_subtext|linebreaksbr }}
-                    {% else %}
-                        Select a building from the left sidebar to view room availability by building.
-                    {% endif %}
-                    </p>
-                    {% if pageContent %}
-                        {% if pageContent.header_block_text %}
-                            {{ pageContent.header_block_text|linebreaks }}
-                        {% endif %}
-                    {% endif %}
-                    <hr class="yellow-line">
-              </div>
-              
-              
-              <div class="col-md-6">
-                  <div class="landing-panel panel">
-                    <div class="landing-panel-heading container-fluid" data-toggle="collapse" data-target="#lottery-info-panel" style="clear: both;">
-                        <h3 class="landing-panel-title" style="float: left;">Lottery Logistics</h3>
-                        <h3 class="landing-panel-title" style="float: right;"><span class="glyphicon glyphicon-plus"></span></h3>
-                    </div>
-                    <div id="lottery-info-panel" class="panel-collapse collapse">
-                        <div class="panel-body">
-                            <h4 class="h4-panel">
-                            {% if pageContent %}
-                                {{ pageContent.lottery_name }}
-                            {% else %}
-                                General Lottery
-                            {% endif %}
-                            </h4>
-                            {% if pageContent %}
-                                {{ pageContent.lottery_text|linebreaksbr }} 
-                            {% else %}
-                                The General Lottery provides students an opportunity to select all other housing options not chosen in the Blocking, Co-Op and Substance-Free lotteries or otherwise pre-assigned. You do not need to sign up for the General Lottery. For more information about the lottery visit the <a href="https://www.hamilton.edu/offices/residentiallife/lottery/general-lottery">Office of Residential Life website</a>.
-                            {% endif %}
-                        </div>
-                    </div>
-                  </div>
-              </div>
-
-              <div class="col-md-6">
-                  <div class="landing-panel panel">
-                    <div class="landing-panel-heading container-fluid" data-toggle="collapse" data-target="#contact-info-panel" style="clear: both;">
-                        <h3 class="landing-panel-title" style="float: left;">Contact</h3>
-                        <h3 class="landing-panel-title" style="float: right;"><span class="glyphicon glyphicon-plus"></span></h3>
-                    </div>
-                    <div id="contact-info-panel" class="panel-collapse collapse">
-                        <div class="panel-body">
-                            For questions or comments about the use of this website, please fill out our <a href="{% url 'contact' %}">contact form</a>.<br><br>
-                            {% if pageContent %}
-                                {{ pageContent.contact|linebreaksbr }}
-                            {% else %}
-                                Questions pertaining to the lottery and the lottery process should be directed to Ashley Place, assistant director of Residential Life, at <a href="mailto:aplace@hamilton.edu">aplace@hamilton.edu</a>.
-                            {% endif %}
-                        </div>
-                    </div>
-                  </div>
-              </div>
-              
-              <div class="col-md-12">
-                    <a class="twitter-timeline" href="https://twitter.com/HamiltonResLife">
-                        Tweets by @HamiltonResLife
-                    </a>
-              </div>
-          </div>
-      </div>
-    </div><!--/row-offcanvas -->
-
-
-    <!-- Bootstrap core JavaScript
-    ================================================== -->
-    <!-- Placed at the end of the document so the pages load faster -->
-    <script src="https://ajax.googleapis.com/ajax/libs/jquery/1.12.4/jquery.min.js"></script>
-    <script>window.jQuery || document.write('<script src="/static/students/assets/js/vendor/jquery.min.js"><\/script>')</script>
-    <script src="/../static/students/dist/js/bootstrap.min.js"></script>
-    <!-- IE10 viewport hack for Surface/desktop Windows 8 bug -->
-    <script src="/static/students/assets/js/ie10-viewport-bug-workaround.js"></script>
-    <!-- Script for collapsable side navigation -->
-    <script src="/static/students/sidebar/sidebar.js"></script>
-      
-    <!-- Twitter Timeline
-    ================================================== -->
-    <script src="/static/students/assets/js/twitter-timeline.js"></script>
-      
-    <!-- Script for filtering building sidebar -->
-    <script src="/static/students/sidebar/sidebar-filter.js"></script>                   
-      
-  </body>
-</html>
+{% include "students/base.html" %}
