--- a/staff/templates/staff/LotteryNumberInput.html
+++ b/staff/templates/staff/LotteryNumberInput.html
@@ -37,15 +37,25 @@
 
     <div class="container-fluid">
         <div class="starter-template">
-            <h1>Input the Next Lottery Number</h1>
-            <p class="lead">Current Number: {{ LotteryNumber }}</p>
-            <form method="POST" class="post-form">
-                {% csrf_token %}
-                
-                {{form.as_p}}
-                
-                <button type="submit" class="save btn btn-default">Save</button>
-            </form>
+            <div class="col-md-2"></div>
+            <div class="col-md-8">
+                <h1>Input the Next Lottery Number</h1>
+                <p class="lead">Current Number: {{ LotteryNumber }}</p>
+                <form method="POST" class="post-form form-horizontal">
+                    <div class="container-fluid">
+                        {% csrf_token %}
+
+                        {% for field in form %}
+                        <div class="form-group form-group-lg">
+                            <label for="FormInput" class="control-label">{{field.label}}</label>
+                            <div>{{field}}</div>
+                        </div>
+                        {% endfor %}
+                    </div>
+                    
+                    <button type="submit" class="save btn btn-default btn-lg">Save</button>
+                </form>
+            </div>
         </div>
     </div><!-- /.container-fluid -->
 
@@ -58,5 +68,6 @@
     <script src="/../static/staff/dist/js/bootstrap.min.js"></script>
     <!-- IE10 viewport hack for Surface/desktop Windows 8 bug -->
     <script src="/static/staff/assets/js/ie10-viewport-bug-workaround.js"></script>
+    <script src="/static/staff/RoomSelect/addFormControlToInputs.js"></script>
   </body>
 </html>
