--- a/staff/templates/staff/edit/room.html
+++ b/staff/templates/staff/edit/room.html
@@ -35,7 +35,7 @@
   <body>
     {% include "staff/header.html" %}
 
-    <div class="container-fluid">
+    <div class="container-fluid" id="main">
         <div class="starter-template">
             <h1>Edit Room Information</h1>
             <form method="POST" class="post-form">
