--- a/staff/templates/staff/edit/transaction.html
+++ b/staff/templates/staff/edit/transaction.html
@@ -39,7 +39,7 @@
     {% include "staff/header.html" %}
    
       
-    <div class="container-fluid">
+    <div class="container-fluid" id="main">
         <div class="starter-template">
         <h1>Review a Room</h1>
             <p class="lead">
