--- a/staff/templates/staff/header.html
+++ b/staff/templates/staff/header.html
@@ -1,9 +1,3 @@
-<style type='text/css'>
-        ul.nav li.dropdown:hover ul.dropdown-menu {
-            display: block;
-        }
-    </style>
-
 <nav class="navbar navbar-inverse navbar-fixed-top">
     <div class="container-fluid">
         <div class="navbar-header">
@@ -17,19 +11,24 @@
         </div>
         <div id="navbar" class="collapse navbar-collapse">
           <ul class="nav navbar-nav">
-              <li class = "dropdown">
-                  <a class = "dropdown-toggle disabled" data-toggle="dropdown" href= "{% url 'select' %}">Selection Options</a>
-                  <ul class = "dropdown-menu">
-                      <li><a href = "{% url 'room-select' %}">Select Room</a></li>
-                      <li><a href = "{% url 'suite-select' %}"> Select Suite</a></li>
+              <li class="dropdown">
+                  <a class="dropdown-toggle" data-toggle="dropdown" role="button">Selection Options <span class="caret"></span></a>
+                  <ul class="dropdown-menu">
+                      <li><a href="{% url 'room-select' %}">Room</a></li>
+                      <li><a href="{% url 'suite-select' %}">Suite</a></li>
+                      <li><a href="{% url 'select' %}">Apartment</a></li>
+                      <li role="separator" class="divider"></li>
+                      <li><a href="{% url 'select' %}">View all options</a></li>
                   </ul>
               </li>
               <li class = "dropdown">
-                  <a class = "dropdown-toggle disabled" data-toggle="dropdown" href= "{% url 'edit' %}">Edit Option</a>
-                    <ul class = "dropdown-menu">
-                      <li><a href = "{% url 'edit-room' %}">Edit Room</a></li>
-                      <li><a href = "{% url 'edit-building' %}">Edit Building</a></li>
-                      <li><a href = "{% url 'review-room' %}">Edit Selection</a></li>
+                  <a class="dropdown-toggle" data-toggle="dropdown" href="{% url 'edit' %}">Edit Options <span class="caret"></span></a>
+                    <ul class="dropdown-menu">
+                      <li><a href="{% url 'edit-room' %}">Room</a></li>
+                      <li><a href="{% url 'edit-building' %}">Building</a></li>
+                      <li><a href="{% url 'review-room' %}">Selection</a></li>
+                      <li role="separator" class="divider"></li>
+                      <li><a href="{% url 'edit' %}">View all options</a></li>
                     </ul>
               </li>
             <li><a href="{% url 'loto-num' %}">Number Input</a>
@@ -37,6 +36,7 @@
     	  <ul class="nav navbar-nav navbar-right">
             <li>
                {% if user.is_authenticated %}
+                <!-- fixme: header messed up when screen is 786px - 822px -->
                 <p class="navbar-text">Logged in as <strong>{{user.username}}</strong></p>
                {% endif %}
             </li>
