--- a/staff/templates/staff/home.html
+++ b/staff/templates/staff/home.html
@@ -37,38 +37,94 @@
 
     <div class="container-fluid">
       <div class="starter-template">
-          <h1>Welcome to the Lottery Staff Homepage</h1>
-          <p class="lead">Select one of the options above to start</p>
+          <h1>
+              {% if pageContent %}
+                    {{pageContent.header_text}}
+              {% else %}
+              Welcome to the housing lottery, <strong>{{user.username}}</strong>
+              {% endif %}
+          </h1>
+          <p class="lead">
+              {% if pageContent %}
+                    {{ pageContent.header_subtext|linebreaksbr }}
+              {% else %}
+                    Select a room to place a student into, edit a building's information, or input the next lottery number by selecting an option.
+              {% endif %}
+          </p>
           <hr class="yellow-line">
           
            <div class="row">
-                  <div class="col-md-6">
-                      <a href="{% url 'edit' %}" class="nodecor">
-                        <div class="landing-panel panel panel-info">
-                            <div class="landing-panel-heading">
-                                <h3 class="landing-panel-title">Editing</h3>
-                            </div>
-                            <div class="panel-body">
+              <div class="col-md-6">
+                  <a href="{% url 'edit' %}" class="nodecor">
+                    <div class="landing-panel panel">
+                        <div class="landing-panel-heading">
+                            <h3 class="landing-panel-title">Editing</h3>
+                        </div>
+                        <div class="panel-body">
+                            {% if pageContent %}
+                                {{ pageContent.edit_text|linebreaksbr }} 
+                            {% else %}
                                 Edit a record for a previous placement or change details about a building or room.<br><br>
                                 For example, make McIntosh closed to women, add notes to a room, or change where a student was placed.
-                            </div>
+                            {% endif %}
                         </div>
-                      </a>
-                  </div>
-                  <div class="col-md-6">
-                      <a href="{% url 'select' %}" class="nodecor">
-                        <div class="landing-panel panel panel-info">
-                            <div class="landing-panel-heading">
-                                <h3 class="landing-panel-title">Selection</h3>
-                            </div>
-                            <div class="panel-body">
+                    </div>
+                  </a>
+              </div>
+              <div class="col-md-6">
+                  <a href="{% url 'select' %}" class="nodecor">
+                    <div class="landing-panel panel">
+                        <div class="landing-panel-heading">
+                            <h3 class="landing-panel-title">Selection</h3>
+                        </div>
+                        <div class="panel-body">
+                            {% if pageContent %}
+                                {{ pageContent.select_text|linebreaksbr }} 
+                            {% else %}
                                 Place students in a room, apartment, or suite.<br><br> 
                                 For example, place Block 10 in Babbitt 30, place a student in a single in Minor, or place students in a Griffin Road Apartment.
-                            </div>
+                            {% endif %}
                         </div>
-                      </a>
-                  </div>
+                    </div>
+                  </a>
+              </div>
           </div>
+          <div class="row">
+              <div class="col-md-6">
+                  <a href="{% url 'loto-num' %}" class="nodecor">
+                    <div class="landing-panel panel">
+                        <div class="landing-panel-heading">
+                            <h3 class="landing-panel-title">Number Input</h3>
+                        </div>
+                        <div class="panel-body">
+                            {% if pageContent %}
+                                {{ pageContent.loto_num_text|linebreaksbr }} 
+                            {% else %}
+                                Input the next lottery number that will be called.<br><br> 
+                                For example, after lottery number 255 is checked in, input lottery number 256.
+                            {% endif %}
+                        </div>
+                    </div>
+                  </a>
+              </div>
+              <div class="col-md-6">
+                  <div class="landing-panel landing-panel-yellow panel">
+                      <div class="landing-panel-heading landing-panel-heading-yellow">
+                        <h3 class="landing-panel-title">Any issues?</h3>
+                      </div>
+                      <div class="panel-body">
+                          For questions or comments about the use of this website, please fill out our <a href="{% url 'contact' %}">contact form</a>.
+                          {% if pageContent %}
+                            {{ pageContent.contact|linebreaksbr }}
+                          {% else %}
+                            <br><br>Questions pertaining to the lottery, the lottery process, or any pressing issues should be directed to Ashley Place, assistant director of Residential Life, at <a href="mailto:aplace@hamilton.edu">aplace@hamilton.edu</a>.
+                          {% endif %}
+                          
+                      </div>
+                  </div>
+              </div>
+          </div>
+            
 
     </div><!-- /.container-fluid -->
 
