--- a/staff/templates/staff/select/select.html
+++ b/staff/templates/staff/select/select.html
@@ -69,6 +69,8 @@
                         </div>
                       </a>
                   </div>
+              </div>
+              <div class="row">
                   <div class="col-md-6">
                       <a href="{% url 'select' %}" class="nodecor">
                         <div class="landing-panel panel panel-info">
