--- a/staff/templates/staff/select/studentInfo.html
+++ b/staff/templates/staff/select/studentInfo.html
@@ -43,7 +43,7 @@
 
   <body>
     {% include "staff/header.html" %}
-    <div class="container-fluid">
+    <div class="container-fluid" id="main">
       <div class="starter-template">
 
           <div class="col-md-12">
